...
          tabBarIcon: ({ color }) => <WorkoutsIcon color={color as string} />,
        }}
      />
      <Tabs.Screen
        name="nutrition"
        options={{
          title: "Nutrition",
          tabBarAccessibilityLabel: "Nutrition",
          tabBarIcon: ({ color }) => <NutritionIcon color={color as string} />,
        }}
      />
      <Tabs.Screen
        name="metrics/index"
...
